--- a/xcx-active/app.json
+++ b/xcx-active/app.json
@@ -13,7 +13,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#22292c",
-    "navigationBarTitleText": "安徽省合肥市种子大会",
+    "navigationBarTitleText": "线下活动首页",
     "backgroundColor": "#efeff4",
     "navigationBarTextStyle": "#fff"
   },
